# CFIPros-frontend

./: .contract-baseline.json  .contract-current.json  .env.example  .env.integration.local  .env.integration.production  .env.integration.staging  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  AGENTS.md  API_CONNECTION_GUIDE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INTEGRATION_STATUS.md  LICENSE  PHASE_4_INTEGRATION_SUMMARY.md  README.md  RELEASE_CHECKLIST_v1.1.0.md  RELEASE_NOTES_v1.1.0.md  SECURITY.md  deploy.sh  jest.config.js  jest.config.mjs  jest.setup.js  jest.setup.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tasks.md  tsconfig.json
.CC/: create-api-contracts-template.md  create-briefs-template.md  example.md  instructions.md  test.md
.agent-os/code-style/: css-style.md  html-style.md  javascript-style.md  python-style.md
.agent-os/docs/: API_ENDPOINTS.md  PRD.md  tasks.md
.agent-os/product/: mission-lite.md  mission.md  roadmap.md  tech-stack.md
.agent-os/recaps/: 2025-08-23-nextjs-15-frontend-initialization.md  feature-spotlight-menu.md
.agent-os/standards/: best-practices.md  code-style.md  tech-stack.md
.claude/agents/: claude-md-link-updater.md  date-checker.md  file-creator.md  git-repo-manager.md  git-workflow.md  prd-version-strategist.md  project-file-organizer.md  project-manager.md  senior-code-reviewer.md  test-runner.md
.clerk/.tmp/: telemetry.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  dependabot-auto-merge.yml
.playwright-mcp/: after-fixes  current-loading-state  modal-working-final  stuck-loading-screenshots  video-modal-working  with-cursor-and-tooltip  with-working-screenshots
__tests__/: middleware.auth-gating.test.ts  middleware.auth-protection.test.ts  middleware.security-headers.test.ts  security-audit-findings.md  tsconfig.json
__tests__/__utils__/: jest-extended.d.ts  test-utils.tsx
__tests__/accessibility/: FeatureSpotlightMenu.a11y.test.tsx  FileUploader.a11y.test.tsx
__tests__/api/: auth.test.ts  results.test.ts  upload.test.ts  utils.test.ts
__tests__/integration/backend/: README.md  api-client.ts  authentication.test.ts  base-test.ts  base_test.py  batch-processing.test.ts  conftest.py  contract-validation.ts  database.py  file-extraction-direct.test.ts  file-extraction.test.ts  index.ts  jest.config.ts  processing-status-direct.test.ts  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup.ts  test-runner.ts  test_authentication.py  test_backend_health.py  test_file_extraction.py  user-management-direct.test.ts  verify_setup.py
api-contracts/: openapi.yaml
app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  opengraph-image.tsx  robots.ts  sitemap.ts
components/: ErrorBoundary.tsx  PerformanceMonitor.tsx  SimplePerformanceMonitor.tsx
coverage-acs/: clover.xml  coverage-final.json  lcov.info
coverage-extractor/: clover.xml  coverage-final.json  lcov.info
docs/: ACS_DATABASE_PHASE2_IMPLEMENTATION.md  API_CONNECTION_GUIDE.md  PHASE2_COMPLETION_SUMMARY.md  RELEASE_NOTES_v1.1.0.md  REORGANIZATION_LOG.md  STRUCTURE_AND_STANDARDS.md  authentication-architecture.md  authentication-patterns.md
hooks/: useAcsFilters.ts  useAcsPerformance.ts  useAuth.ts.bak  useDebounce.ts  useInfiniteScroll.ts  useRecentSearches.ts  useSearchSuggestions.ts  useVirtualization.ts
lib/: config.ts  constants.ts  utils.ts
public/: manifest.json
scripts/: accessibility-audit.js  cleanup-repo.sh  contract-drift-check.js  create-placeholder-images.js  demo-api-flow.js  performance-audit.js  test-api-connection.js  test-upgrade.bat  test-upgrade.sh  validate-phase2.js  verify-api.ts
(+831 files in other folders)
